Regnerated from Jira

--- a/DMTR-211.tex
+++ b/DMTR-211.tex
@@ -15,13 +15,13 @@
 
 \begin{document}
 
-\def\milestoneName{Portal integrated with workspace}
+\def\milestoneName{Portal Integrated with Workspace}
 \def\milestoneId{DM-SUIT-8}
 \def\product{LSP Services}
 
 \setDocCompact{true}
 
-\title{DM-SUIT-8 - Portal integrated with workspace Test Plan and Report}
+\title{DM-SUIT-8 - Portal Integrated with Workspace Test Plan and Report}
 \setDocRef{\lsstDocType-\lsstDocNum}
 \date{\vcsdate}
 \author{ Gregory Dubois-Felsmann }
@@ -30,7 +30,7 @@
 
 
 \setDocAbstract{
-This is the test plan and report for DM-SUIT-8 (Portal integrated with workspace),
+This is the test plan and report for DM-SUIT-8 (Portal Integrated with Workspace),
 an LSST milestone pertaining to the Data Management Subsystem.
 }
 
@@ -165,9 +165,9 @@ Gregory Dubois-Felsmann}
 \begin{longtable}{p{2cm}cp{2.3cm}p{8.6cm}p{2.3cm}}
 \toprule
 \multicolumn{2}{r}{ T. Plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P69}{LVV-P69}:} &
-\multicolumn{2}{p{10.9cm}}{\textbf{ DM-SUIT-8: Portal integrated with workspace }} & Draft \\\hline
+\multicolumn{2}{p{10.9cm}}{\textbf{ DM-SUIT-8: Portal Integrated with Workspace }} & Draft \\\hline
 \multicolumn{2}{r}{ T. Cycle \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testCycle/LVV-C151}{LVV-C151}:} &
-\multicolumn{2}{p{10.9cm}}{\textbf{ DM-SUIT-8: Portal integrated with workspace }} & Not Executed \\\hline
+\multicolumn{2}{p{10.9cm}}{\textbf{ DM-SUIT-8: Portal Integrated with Workspace }} & Not Executed \\\hline
 \textbf{Test Cases} &  \textbf{Ver.} & \textbf{Status} & \textbf{Comment} & \textbf{Issues} \\\toprule
 \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T1818}{LVV-T1818}
 &  1
@@ -200,9 +200,9 @@ Not yet available.
 
 \subsection{Test Cycle LVV-C151 }
 
-Open test cycle {\it \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testrun/LVV-C151}{DM-SUIT-8: Portal integrated with workspace}} in Jira.
+Open test cycle {\it \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testrun/LVV-C151}{DM-SUIT-8: Portal Integrated with Workspace}} in Jira.
 
-Test Cycle name: DM-SUIT-8: Portal integrated with workspace\\
+Test Cycle name: DM-SUIT-8: Portal Integrated with Workspace\\
 Status: Not Executed
 
 This test cycle contains a single test case which demonstrates several
