Fixed appendix justification

--- a/DMTR-211.appendix.tex
+++ b/DMTR-211.appendix.tex
@@ -1,6 +1,6 @@
 \section{Traceability}
 
-\begin{longtable}{p{3cm}p{3cm}p{9cm}}
+\begin{longtable}{p{3cm}p{3cm}L{9cm}}
 \hline
 \textbf{Test Case} & \textbf{VE Key} & \textbf{VE Summary} \\ \hline
   \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T1818}{LVV-T1818} &
