--- a/DMTR-211.appendix.tex
+++ b/DMTR-211.appendix.tex
@@ -3,24 +3,20 @@
 \begin{longtable}{p{3cm}p{3cm}L{9cm}}
 \hline
 \textbf{Test Case} & \textbf{VE Key} & \textbf{VE Summary} \\ \hline
-  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T1818}{LVV-T1818} &
+\href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T1818}{LVV-T1818} &
   \href{https://jira.lsstcorp.org/browse/LVV-9886}{LVV-9886}
   & DMS-PRTL-REQ-0046-V-01: Visualization of Workspace Data\_1
  \\ \cdashline{2-3}
-      &
-  \href{https://jira.lsstcorp.org/browse/LVV-9846}{LVV-9846}
+ &   \href{https://jira.lsstcorp.org/browse/LVV-9846}{LVV-9846}
   & DMS-PRTL-REQ-0003-V-01: Portal Access to Workspace\_1
  \\ \cdashline{2-3}
-      &
-  \href{https://jira.lsstcorp.org/browse/LVV-9932}{LVV-9932}
+ &   \href{https://jira.lsstcorp.org/browse/LVV-9932}{LVV-9932}
   & DMS-PRTL-REQ-0095-V-01: Saving Displayed Tabular Data\_1
  \\ \cdashline{2-3}
-      &
-  \href{https://jira.lsstcorp.org/browse/LVV-9951}{LVV-9951}
+ &   \href{https://jira.lsstcorp.org/browse/LVV-9951}{LVV-9951}
   & DMS-PRTL-REQ-0111-V-01: Image Data Download\_1
  \\ \cdashline{2-3}
-      &
-  \href{https://jira.lsstcorp.org/browse/LVV-9954}{LVV-9954}
+ &   \href{https://jira.lsstcorp.org/browse/LVV-9954}{LVV-9954}
   & DMS-PRTL-REQ-0110-V-01: Tabular Data Download\_1
  \\ \cdashline{2-3}
 \hline
