Test report finalization

--- a/DMTR-211.tex
+++ b/DMTR-211.tex
@@ -87,7 +87,7 @@ Section \ref{sect:overview} provides a summary of the test results, including an
 an overall assessment statement and suggestions for possible improvements.
 Section \ref{sect:detailedtestresults} provides detailed results for each step in each test case.
 
-The current status of test plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P69}{LVV-P69} in Jira is \textbf{ Approved }.
+The current status of test plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P69}{LVV-P69} in Jira is \textbf{ Completed }.
 
 \subsection{References}
 \label{sect:references}
@@ -183,7 +183,7 @@ Gregory Dubois-Felsmann}
 \begin{longtable}{p{2cm}cp{2.3cm}p{8.6cm}p{2.3cm}}
 \toprule
 \multicolumn{2}{r}{ T. Plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P69}{LVV-P69}:} &
-\multicolumn{2}{p{10.9cm}}{\textbf{ DM-SUIT-8: Portal Integrated with Workspace }} & Approved \\\hline
+\multicolumn{2}{p{10.9cm}}{\textbf{ DM-SUIT-8: Portal Integrated with Workspace }} & Completed \\\hline
 \multicolumn{2}{r}{ T. Cycle \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testCycle/LVV-C151}{LVV-C151}:} &
 \multicolumn{2}{p{10.9cm}}{\textbf{ DM-SUIT-8: Portal Integrated with Workspace }} & Done \\\hline
 \textbf{Test Cases} &  \textbf{Ver.} & \textbf{Status} & \textbf{Comment} & \textbf{Issues} \\\toprule
