--- a/history_and_info.tex
+++ b/history_and_info.tex
@@ -1,5 +1,6 @@
 % Most recent last
 \setDocChangeRecord{
+\addtohist{2.0}{2020-05-13}{LVV-P69 completed and test report approved (\jira{DM-22559}).}{G.~Dubois-Felsmann}
 \addtohist{1.0}{2020-03-31}{LVV-P69 approved.}{G.~Dubois-Felsmann}
 \addtohist{}{2020-03-19}{First Draft}{G.~Dubois-Felsmann}
 }
