--- a/DMTR-211.tex
+++ b/DMTR-211.tex
@@ -1,4 +1,4 @@
-\documentclass[DM,lsstdraft,STR,toc]{lsstdoc}
+\documentclass[DM,STR,toc]{lsstdoc}
 \usepackage{geometry}
 \usepackage{longtable,booktabs}
 \usepackage{enumitem}
@@ -26,7 +26,7 @@
 
 \title{DM-SUIT-8: Portal Integrated with Workspace Test Plan and Report}
 \setDocRef{\lsstDocType-\lsstDocNum}
-\date{\vcsdate}
+\date{2020-05-13}
 \author{ Gregory Dubois-Felsmann }
 
 \input{history_and_info.tex}
